welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:1: error: not found: value Biscuit
var flag=0;Biscuit=0;co=0
           ^RunHalf:1: error: not found: value co
var flag=0;Biscuit=0;co=0
                     ^RunHalf:2: error: type mismatch;
 found   : Unit
 required: Boolean
while(flag=0){avance
          ^RunHalf:3: error: not found: value Biscuit
if (estSurBiscuit){Biscuit=Biscuit+1}
                   ^RunHalf:4: error: value update is not a member of java.awt.Color
if (getCouleurSol()=color.orange){co=co+1}
    ^RunHalf:4: error: not found: value co
if (getCouleurSol()=color.orange){co=co+1}
                                  ^RunHalf:5: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Short)Int
match expected type ?
if(2 * Biscuit = co + 1){flag=1}}
     ^