welcome.lessons.welcome.variables.RunHalf.scala.code
var flag=0;Biscuit=0;co=0
while(flag=0){avance
if (estSurBiscuit){Biscuit=Biscuit+1}
if (getCouleurSol()=color.orange){co=co+1}
if(2 * Biscuit = co + 1){flag=1}}
